# xfoil-c

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
Xfoil/: CMakeLists.txt
Xfoil/orrs/: CMakeLists.txt
Xfoil/orrs/src/: osmap.f
Xfoil/plotlib/: CMakeLists.txt
include/xfoil/: xfoil_lib.h
source/: xfoil_lib.cc
test/: CMakeLists.txt
test/source/: main.cpp
